# ME462-MechatronicDesign

./: .gitignore  README.md
1.Research/: List of prototype autonomous RC cars.md
3.Firmware/Command Center/alize_2dnav/: CMakeLists.txt  package.xml
3.Firmware/Command Center/g_slam/: CMakeLists.txt  package.xml
3.Firmware/Command Center/keyboard_commands/: CMakeLists.txt  package.xml
3.Firmware/EncoderPico/QuadratureEncoder/: CMakeLists.txt  build and upload
3.Firmware/EncoderPico/QuadratureEncoder/quadrature_encoder/: CMakeLists.txt  quadrature_encoder.c
3.Firmware/EncoderPico/SerialSniffer/: SerialPlotter.py  SerialSniffer.py  notes
3.Firmware/MainCode/: MainCode.ino
3.Firmware/MainCode/ardu_firm_II/: ardu_firm_II.ino
3.Firmware/MainCode/sketch_jun04a/: .sketch_jun04a.ino.swn  .sketch_jun04a.ino.swo  .sketch_jun04a.ino.swp  sketch_jun04a.ino
3.Firmware/src/arduino_connection/: package.xml  setup.cfg  setup.py
4.Model/Encoder/: 6x6_EncoderMagnetHub_v2.f3d  6x6_EncoderMagnetHub_v2.step
4.Model/Makita Battery/: Makita_battery_mount.stl  xl4016E_holder.stl
4.Model/Print History/: Alize-001-00.stl  Alize-002-00.stl  Alize-003-00.stl  Alize-004-00.stl  Alize-005-00.stl  Alize-006-00.stl  Alize-007-00.stl  Alize-008-01.stl  Alize-008-02.stl  Alize-009-00.ipt  Alize-009-00.stl  Alize-010-00.stl  Alize-011-00.stl  Alize-012-00.stl  EncodeHall.stl  Part47.stl  acil.stl  base.stl  cam_mount_right.stl  contact.3mf  makita_conn_pcb.dxf  makita_to_sigma.stp  mz80_on.stl  servo_deneme.stl  sigma_adaptor_v2.step  sigma_adaptör_2_v2.stl  sigma_connector_v2.step
(+89 files in other folders)
